--- a/lab1/notebooks/01-vi-look-at-emnist.ipynb
+++ b/lab1/notebooks/01-vi-look-at-emnist.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -46,6 +55,13 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading EMNIST (processed)...\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -105,6 +121,13 @@
     "    ax.imshow(emnist_data.x_train[i].reshape(28, 28), cmap='gray')\n",
     "    ax.set_title(emnist_data.mapping[np.argmax(emnist_data.y_train[i])])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
